Some changes planning the Home page

--- a/Auctions/Views/Home/Index.cshtml
+++ b/Auctions/Views/Home/Index.cshtml
@@ -3,6 +3,34 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to HeArt... Art with Heart</h1>
+    <p>Here you will see and slide with inspirational sentences that motivate you to love art and buy it and nice images</p>
 </div>
+
+
+<div class="text-center">
+    <h1 class="display-4">Our Favorites art pieces</h1>
+    <p>Here you will see and slide with 3 pictures of the art pieces, and the name of the art piece and the artist below every picture. </p>
+    <p>Every piccture is a link to the article form with all information about that art piece. </p>
+</div>
+
+
+<div class="text-center">
+    <h1 class="display-4">Browse by categories</h1>
+    <p>Here you will see pictures with the name of every category, every one is a link to a view that shows the pieces of art into this category. </p>
+</div>
+
+
+<div class="text-center">
+    <h1 class="display-4">Browse by Artist</h1>
+    <p>Here you will see pictures in a slide with the name of every artist, every one is a link to a view that shows the pieces of art from this artist. </p>
+</div>
+
+
+
+<div class="text-center">
+    <h1 class="display-4">Browse by price</h1>
+    <p>Here you will see pictures with any art piece and a range of prices. Every one is a link to a view that shows the pieces of art into this price range. </p>
+</div>
+
+
