--- a/Auctions/Views/Home/Privacy.cshtml
+++ b/Auctions/Views/Home/Privacy.cshtml
@@ -3,4 +3,21 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    At HeArt we value your information and privacy. This Privacy Policy describes what information we collect, why we collect it, and how you can update, manage, export, and delete your information.
+    Information HeArt Collects
+</p><p>
+    In order to provide better services, we collect information about you.
+    Account Creation
+</p><p>
+    When you sign up for an account, we will store personal information that includes your name, email address, billing information, and any other information you choose to add to your profile settings.You may choose to sign in or sign up through Google or Microsoft 365. HeArt will receive certain profile and account information from these applications in order to create your profile. You should consult Google and Microsoft 365’s privacy policy for information about their practices if you choose to connect to HeArt this way.
+    Your Content
+</p><p>
+    We collect and store the information and content that you post to HeArt including articles and policies. Your content, date and time stamps along with your name are visible to your organization only.
+    Your Activity
+</p><p>
+    HeArt does not knowingly collect personal information from children under the age of 13. If you are a parent or legal guardian and think your child under 13 has given us information, you can contact us at support@HeArt.com
+    Updates To This Policy
+</p><p>
+    We will notify you of any significant changes to this policy as may be required by law. The latest version of our policy is available on our website and indicates the date the last changes were published.
+</p>
